--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,45 @@
 {
     "env": {
-        "browser": true,
-        "commonjs": true,
-        "node": true
+    "parser": "babel-eslint",
+    "browser": true,
+    "commonjs": true,
+    "node": true,
+    "es6": true
     },
     "extends": "prettier",
     "plugins": [
-        "prettier"
-      ],
+    "prettier"
+    ],
     "rules": {
-        "no-duplicate-case":"error",
-        "no-empty":"error",
-        "no-extra-semi":"error",
-        "no-func-assign": "error",
-        "no-irregular-whitespace":"error",
-        "no-unreachable": "error",
-        "curly": "error",
-        "dot-notation": "error",
-        "eqeqeq": "error",
-        "no-empty-function": "error",
-        "no-multi-spaces": "error",
-        "no-unused-vars": "error",
-        "camelcase": "error",
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "prettier/prettier": "error"
+    "no-duplicate-case": "error",
+    "no-empty": "error",
+    "no-extra-semi": "error",
+    "no-func-assign": "error",
+    "no-irregular-whitespace": "error",
+    "no-unreachable": "error",
+    "curly": "error",
+    "dot-notation": "error",
+    "eqeqeq": "error",
+    "no-empty-function": "error",
+    "no-multi-spaces": "error",
+    "no-unused-vars": "error",
+    "camelcase": "error",
+    "indent": [
+    "error",
+    2
+    ],
+    "linebreak-style": [
+    "error",
+    "windows"
+    ],
+    "quotes": [
+    "error",
+    "double"
+    ],
+    "semi": [
+    "error",
+    "always"
+    ],
+    "prettier/prettier": "error"
     }
-}
+    }
