--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "node-handlebars-boilerplate",
-  "version": "1.0.0",
-  "description": "Project 2 Starter",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "lint": "eslint \"./**/*.js\"",
-    "fix": "eslint --fix .",
-    "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "dotenv": "^6.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mysql2": "^1.7.0",
-    "sequelize": "^4.44.4"
-  },
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.10.0",
-    "eslint-plugin-prettier": "^2.7.0",
-    "mocha": "^5.2.0",
-    "prettier": "^1.19.1"
-  }
+    "name": "node-handlebars-boilerplate",
+    "version": "1.0.0",
+    "description": "Project 2 Starter",
+    "main": "server.js",
+    "scripts": {
+        "start": "nodemon server.js",
+        "lint": "eslint \"./**/*.js\"",
+        "fix": "eslint --fix .",
+        "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
+    },
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "dotenv": "^6.2.0",
+        "express": "^4.17.1",
+        "express-handlebars": "^3.1.0",
+        "express-session": "^1.17.1",
+        "mysql2": "^1.7.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "sequelize": "^6.3.5"
+    },
+    "devDependencies": {
+        "eslint": "^4.19.1",
+        "eslint-config-prettier": "^2.10.0",
+        "eslint-plugin-prettier": "^2.7.0",
+        "mocha": "^5.2.0",
+        "prettier": "^1.19.1",
+        "nodemon": "^2.0.6"
+    }
 }
