--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "TitoBurrito1!",
+        "password": "",
         "database": "storedb",
         "host": "localhost",
         "dialect": "mysql"
